# cpp-gravity-simulation

./: .gitignore  CMakeLists.txt  circle.cpp  circle.h  main.cpp  main.h  window.cpp  window.h
src/: main.cpp
src/core/: ball.cpp  ball.h  constants.cpp  constants.h
src/graphics/: draw.cpp  draw.h  window.cpp  window.h
